<resources>
    <string name="app_name">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Дом</string>
    <string name="menu_gym">Тренажерный зал</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="add_gym_goal">Добавить</string>
    <string name="gym_text_training">Тренировка:</string>
    <string name="delete">Удалить</string>
    <string name="edit">Редактировать</string>
    <string name="question_delete">Вы действительно хотите удалить запись?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="new_training">Новая тренировка:</string>
    <string name="old_name">Прошлое имя:</string>
    <string name="new_name">Новое имя:</string>
    <string name="change">Изменить</string>
    <string name="cancel">Отмена</string>
    <string name="fill_new_name">Заполните новое имя</string>
    <string name="water">Вода</string>
    <string name="electricity">Електричество</string>
    <string name="gas">Газ</string>
    <string name="counters">Показания счетчиков</string>
    <string name="oldCounter">Старые показания:</string>
    <string name="newCounter">Новые показания</string>
    <string name="indication">Показания</string>
    <string name="show">Показать</string>
    <string name="null_done_goals">Данных о завершенных тренировках нет в БД</string>
    <string name="menu_hookah">Кальян</string>
</resources>
